# billing-system-l4cqkz

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  infrastructure-ci.yml  release.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/helm/api-gateway/: Chart.yaml  values.yaml
infrastructure/helm/billing-service/: Chart.yaml  values.yaml
infrastructure/helm/event-processor/: Chart.yaml  values.yaml
infrastructure/helm/invoice-service/: Chart.yaml  values.yaml
infrastructure/helm/wallet-service/: Chart.yaml  values.yaml
infrastructure/helm/web/: Chart.yaml  values.yaml
infrastructure/kubernetes/apps/: kustomization.yaml
infrastructure/kubernetes/base/: cert-manager.yaml  external-dns.yaml  ingress-nginx.yaml  metrics-server.yaml  namespaces.yaml  storage-class.yaml
infrastructure/scripts/: backup-databases.sh  deploy-apps.sh  deploy-monitoring.sh  init-cluster.sh  rotate-secrets.sh
infrastructure/terraform/aws/: backend.tf  outputs.tf  provider.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  package.json  tsconfig.json
src/backend/api-gateway/: Dockerfile  kong.yml  nginx.conf  rate-limiting.conf  security-headers.conf
src/backend/billing-service/: Dockerfile  pom.xml
src/backend/event-processor/: Dockerfile  package.json  tsconfig.json
src/backend/invoice-service/: Dockerfile  pyproject.toml  requirements.txt
src/backend/invoice-service/src/: main.py
src/backend/invoice-service/src/api/: routes.py
src/backend/invoice-service/src/core/: config.py
src/backend/invoice-service/src/models/: invoice.py
src/backend/invoice-service/src/services/: invoice_generator.py
src/backend/invoice-service/src/utils/: pdf_generator.py
src/backend/invoice-service/tests/: test_invoice_generation.py
src/web/: .dockerignore  .env.development  .env.production  .env.test  .eslintrc.ts  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+178 files in other folders)
