[tool.poetry]
name = "otpless-invoice-service"
version = "1.0.0"
description = "OTPless Invoice Service for automated invoice generation and management"
authors = ["OTPless Team <team@otpless.com>"]
repository = "https://github.com/otpless/billing-system"
documentation = "https://docs.otpless.com/billing/invoice-service"
packages = [
    { include = "src" }
]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
reportlab = "^4.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
psycopg2-binary = "^2.9.0"
python-multipart = "^0.0.6"
boto3 = "^1.28.0"
prometheus-client = "^0.17.0"
python-json-logger = "^2.0.0"
opentelemetry-api = "^1.18.0"
opentelemetry-sdk = "^1.18.0"
opentelemetry-instrumentation-fastapi = "^0.39.0"
redis = "^4.6.0"
aiohttp = "^3.8.5"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
safety = "^2.3.5"
sphinx = "^7.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/**/*.py"
extend-exclude = "/migrations"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["invoice_service"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
asyncio_mode = "auto"
markers = [
    "unit: marks unit tests",
    "integration: marks integration tests",
    "slow: marks slow running tests"
]